--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.4.8",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.3.0",
+    "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0"
