--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@iconify/react": "^5.2.0",
     "@mui/material": "^6.4.8",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.3.0",
